--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,4 +1,16 @@
 header{
-    background-color: #05141f;
+    background-color: black;
     height: 100px;
+}
+.logo{
+    width: 100%;
+    height: 100px;
+}
+ .logo img{
+    height: 90px;
+    width: 90px;
+}
+main{
+    background-color: #1d2e3d;
+    height: calc(100vh - 100px);
 }
